tests/baselines/reference/parserMemberVariableDeclaration2.errors.txt
parserMemberVariableDeclaration2.ts(2,10): error TS1434: Unexpected keyword or identifier.


==== parserMemberVariableDeclaration2.ts (1 errors) ====
    class C {
      static static Foo;
             ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    }